# tcm-control

./: .gitignore  README.md  pyproject.toml
archive/archive_python/: devices.py  dripping_droplets.py  flow_profile.py  new_valve_control.py  send_data.py
source_python/tcm_control/: cough.py  init_config.py  logger.py  main.py  processing.py
source_python/tcm_control/archive/: flowmeter_plotter.py  process_droplets_spacetime.py  pump_test.py  valve_control.py
source_python/tcm_control/calibration/: pressure_calibration.py
source_python/tcm_control/config/: config.toml  config_manual_mode.toml  config_old.json  prop_valve_calibration.csv  syringe_sizes.csv
source_python/tcm_control/devices/: __init__.py  base.py  cough_machine.py  lift_spraytec.py  spraytec_output.py  syringe_pump.py
source_python/tcm_control/example_spraytec_data/: spraytec1_260304_115013_741600.csv  spraytec2_260304_115045_245800.csv  spraytec_metadata.json
source_python/tcm_control/flow_curves/: default_curve_new.csv  step.csv  test_steps.csv
source_python/tcm_control/flow_curves/archive/: PyramidFlowProfile.csv  RampFlowProfile.csv  default_curve.csv
source_python/tcm_control/scripts/: archive_spraytec_append.py  create_flow_curve.py  example_load_spraytec_csvs.py
